--- a/views/shipment-info.html
+++ b/views/shipment-info.html
@@ -1,4 +1,8 @@
-<div  class="panel panel-default" ng-class="{'panel-success' : shipment.status == 'Enviado', 'panel-danger' : shipment.status == 'Cancelado'}">
+<div  class="panel panel-default" 
+     ng-class="{
+        'panel-success' : shipment.status == 'Enviado', 
+        'panel-danger' : shipment.status == 'Cancelado'}">
+    
     <div class="panel-heading">
         <i class="fa fa-calendar-o"></i> {{shipment.date}}
         <span class="status"><i class="fa {{shipment.status == 'Enviado' ? 'fa-check' : shipment.status == 'Cancelado' ? 'fa-times' : 'fa-clock-o'}}"></i> {{shipment.status}}</span>
@@ -10,15 +14,10 @@
                 <h4>Detalles del Envío</h4>
                 <i class="fa fa-user"></i> Recibe: {{shipment.delivery.addressee}} <br>
                 <i class="fa fa-home"></i> Dirección: <br>
-                <blockquote>
-                    {{shipment.delivery.address.street}} <br>
-                    {{shipment.delivery.address.zone}} <br>
-                    {{shipment.delivery.address.city}} <br>
-                    C.P. {{shipment.delivery.address.zip}}
-                </blockquote>
+                <blockquote>{{shipment.delivery.address }}</blockquote>
                 <i class="fa fa-phone"></i> Teléfono: {{shipment.delivery.phone}}<br>
-
-                <button class="btn btn-xs btn-info btn-guia">Descargar Guía</button>
+                
+                <button class="btn btn-xs btn-info btn-guia" ng-show="shipment.delivery.pdf">Descargar Guía</button>
             </div>
 
             <!-- Paquete -->
@@ -26,11 +25,15 @@
                 <h4>Paquete</h4>
                 <i class="fa fa-archive"></i> Contenido del Paquete:
                 <ul>
-                    <li ng-repeat="item in shipment.package.content">
+                    <li ng-repeat="item in shipment.package">
                         {{item}}
                     </li>
                 </ul>
-                <i class="fa fa-truck"></i> Paqueteria: {{shipment.courier}}
+                <i class="fa fa-truck"></i> Paqueteria: {{shipment.delivery.courier}}
+				
+                <div ng-show="shipment.status == 'Enviado'">
+                    <i class="fa fa-barcode"></i> Código Rastreo: {{shipment.delivery.trackCode}}
+                </div>
             </div>
 
 
@@ -44,9 +47,9 @@
                 <button class="btn btn-default" >No Enviado</button>
             </div>
 
-            <div class="notes col-xs-12" ng-show="shipment.comments">
+            <div class="notes col-xs-12" ng-show="shipment.delivery.comments">
                 <h4>Notas</h4>
-                <p>{{shipment.comments}}</p>
+                <p>{{shipment.delivery.comments}}</p>
             </div>
 
 
