Status colors and buttons wirking on shipments list

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
     color: #616060;
 }
 
-.sale .btn-default .fa {
-    color: #333!important;
+.sale .panel-heading .btn-default .fa {
+    color: #333 !important;
 }
 
 .green {
