--- a/views/shipment-info.html
+++ b/views/shipment-info.html
@@ -1,11 +1,21 @@
-<div  class="panel panel-default" 
-     ng-class="{
-        'panel-success' : shipment.status == 'Enviado', 
-        'panel-danger' : shipment.status == 'Cancelado'}">
-    
+<div  class="panel panel-default"
+    ng-class="{
+        'panel-success' : shipment.delivery.status == 'Enviado',
+        'panel-danger' : shipment.delivery.status == 'Cancelado'
+    }">
+
     <div class="panel-heading">
         <i class="fa fa-calendar-o"></i> {{shipment.date}}
-        <span class="status"><i class="fa {{shipment.status == 'Enviado' ? 'fa-check' : shipment.status == 'Cancelado' ? 'fa-times' : 'fa-clock-o'}}"></i> {{shipment.status}}</span>
+        <span class="status">
+            <i class="fa"
+                ng-class="{
+                    'fa-clock-o' : shipment.delivery.status == 'Pendiente',
+                    'fa-times-circle' : shipment.delivery.status == 'Cancelado',
+                    'fa-check-circle' : shipment.delivery.status == 'Enviado'
+                }">
+            </i>
+            {{shipment.delivery.status}}
+        </span>
     </div>
     <div class="panel-body">
         <div class="row">
@@ -16,7 +26,7 @@
                 <i class="fa fa-home"></i> Dirección: <br>
                 <blockquote>{{shipment.delivery.address }}</blockquote>
                 <i class="fa fa-phone"></i> Teléfono: {{shipment.delivery.phone}}<br>
-                
+
                 <button class="btn btn-xs btn-info btn-guia" ng-show="shipment.delivery.pdf">Descargar Guía</button>
             </div>
 
@@ -30,20 +40,20 @@
                     </li>
                 </ul>
                 <i class="fa fa-truck"></i> Paqueteria: {{shipment.delivery.courier}}
-				
-                <div ng-show="shipment.status == 'Enviado'">
+
+                <div ng-show="shipment.delivery.status == 'Enviado'">
                     <i class="fa fa-barcode"></i> Código Rastreo: {{shipment.delivery.trackCode}}
                 </div>
             </div>
 
 
             <!-- Acciones -->
-            <div class="actions visible-md visible-lg col-md-3" ng-hide="shipment.status == 'Enviado'">
-                <button class="btn btn-default" ng-hide="shipment.status == 'Cancelado'">Cancelar</button>
+            <div class="actions visible-md visible-lg col-md-3" ng-hide="shipment.delivery.status == 'Enviado'">
+                <button class="btn btn-default" ng-hide="shipment.delivery.status == 'Cancelado'">Cancelar</button>
                 <button class="btn btn-success" data-toggle="modal" data-target="#trackCodeModal-{{shipment.id}}">Enviado</button>
             </div>
 
-            <div class="actions visible-md visible-lg col-md-3" ng-show="shipment.status == 'Enviado'">
+            <div class="actions visible-md visible-lg col-md-3" ng-show="shipment.delivery.status == 'Enviado'">
                 <button class="btn btn-default" >No Enviado</button>
             </div>
 
@@ -54,13 +64,13 @@
 
 
             <!-- Acciones -->
-            <div class="actions visible-xs visible-sm col-xs-12" ng-hide="shipment.status == 'Enviado'">
-                <button class="btn btn-default" ng-hide="shipment.status == 'Cancelado'">Cancelar</button>
+            <div class="actions visible-xs visible-sm col-xs-12" ng-hide="shipment.delivery.status == 'Enviado'">
+                <button class="btn btn-default" ng-hide="shipment.delivery.status == 'Cancelado'">Cancelar</button>
                 <button class="btn btn-success" data-toggle="modal" data-target="#trackCodeModal-{{shipment.id}}">Enviado</button>
-                <button class="btn btn-default" ng-show="shipment.status == 'Enviado'">No Enviado</button>
+                <button class="btn btn-default" ng-show="shipment.delivery.status == 'Enviado'">No Enviado</button>
             </div>
 
-            <div class="actions visible-xs visible-sm col-xs-12" ng-show="shipment.status == 'Enviado'">
+            <div class="actions visible-xs visible-sm col-xs-12" ng-show="shipment.delivery.status == 'Enviado'">
                 <button class="btn btn-default" >No Enviado</button>
             </div>
         </div>
