--- a/public/views/sale-info.html
+++ b/public/views/sale-info.html
@@ -107,13 +107,15 @@
                 Producto: {{sale.payment.total | currency}} <br>
                 Envío: {{sale.delivery.cost | currency}} <br>
                 Ganancia: {{(sale.payment.total - sale.payment.rawMaterial - sale.payment.commission)  | currency}}
-                <a href="#" data-container="body" data-toggle="popover" data-placement="top" data-html="true" data-content="
+
+                <i class="fa fa-info-circle payment-breakdown"
+                data-container="body" data-toggle="popover" data-placement="top" data-html="true" data-content="
                     Producto: {{sale.payment.total | currency}}<br>
                     Comisión: -{{sale.payment.commission | currency}}<br>
                     M. Prima: -{{sale.payment.rawMaterial | currency}}<br>
                     Dividendo: -{{(sale.payment.total - sale.payment.rawMaterial - sale.payment.commission) * 0.30 | currency}}">
-                <i class="fa fa-info-circle"></i>
-                </a>
+                </i>
+
 
                 <div class="payment-status">
                     <i class="fa fa-money"></i>
