--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,17 @@
   font-size: 10px;
 }
 
+.spinner.absolute {
+  position: absolute;
+  margin: auto;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: none;
+}
+
 .spinner > div {
   background-color: #666;
   height: 100%;
@@ -69,6 +80,11 @@
   clear: both;
 }
 
+.sale {
+  position: relative;
+  display: block;
+}
+
 .sale .panel-heading button .fa {
     color: white !important;
 }
@@ -89,6 +105,14 @@
 
 .sale i.fa-info-circle {
   cursor: pointer;
+}
+
+.sale.loading .spinner.absolute {
+  display: block;
+}
+
+.sale.loading .panel {
+  opacity: 0.4;
 }
 
 .green {
