--- a/public/views/sale-info.html
+++ b/public/views/sale-info.html
@@ -55,7 +55,7 @@
                 <i class="fa fa-truck"></i> Solicitar Envío
             </button>
             <button class="btn btn-xs btn-default"
-                    ng-show="sale.status == 'Eniando'
+                    ng-show="sale.status == 'Enviando'
                     && sale.delivery.status == 'Pendiente'"
                     ng-click="cancelShipment(sale)"
                     ng-disabled="isSaleLoading(sale)">
@@ -133,6 +133,13 @@
                 </div>
             </div>
         </div>
+        <div class="row" ng-show="sale.delivery.comments">
+            <div class="col-xs-12">
+                <br>
+                <i class="fa fa-truck"></i> <strong>Comentarios del Envío:</strong> <br>
+                {{sale.delivery.comments}}
+            </div>
+        </div>
     </div>
 </div>
 <!-- Modal -->
@@ -144,7 +151,7 @@
                 <h4 class="modal-title" id="myModalLabel">Comentarios del Envío</h4>
             </div>
             <div class="modal-body">
-                <textarea id="comments-{{sale.id}}" class="form-control"></textarea>
+                <textarea id="comments-{{sale.id}}" class="form-control">{{sale.delivery.comments}}</textarea>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">
