Sales and Shipments list finished

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -179,6 +179,10 @@ blockquote {
 	float: right;
 }
 
+.pagination .btn {
+  margin-right: 5px;
+}
+
 @media screen and (max-width: 768px) {
 	.shipment h4 {
 		display: block;
