Progress made at work

--- a/public/views/sale-info.html
+++ b/public/views/sale-info.html
@@ -65,7 +65,7 @@
                     ng-show="sale.status != 'En Camino'
                     && sale.status != 'Cancelado'
                     && sale.status != 'Finalizado'"
-                    ng-click=""
+                    ng-click="updateSale(sale)"
                     ng-disabled="isSaleLoading(sale)">
                 <i class="fa fa-pencil"></i>
             </button>
