--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,11 @@
 [ng\:cloak], [ng-cloak], .ng-cloak { display: none; }
 
+.ng-invalid.form-control {
+  border-color: #A94442;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
 .spinner {
   margin: 100px auto;
   width: 50px;
