--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,13 @@
   display: none !important;
 }
 
+.table>tfoot>tr>td {
+  font-weight: bold;
+  vertical-align: bottom;
+  border-top: 2px solid #DDD;
+}
+
+
 .ng-invalid.form-control {
   border-color: #A94442;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
