--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,6 +199,7 @@ blockquote {
 .sale blockquote {
 	padding: 0 0 0 10px;
     margin-bottom: 10px;
+    overflow-x: auto;
 }
 
 .sale .payment-status {
